--- a/main.css
+++ b/main.css
@@ -15,3 +15,34 @@
 .show{
   display:block;
 }
+
+.black-bg {
+  width : 100%;
+  height : 100%;
+  position : fixed;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background : rgba(0,0,0,0.5);
+  z-index : 5;
+  padding: 30px;
+  visibility: hidden;
+  opacity:0;
+  transition: all 1s;
+}
+.white-bg {
+  background: white;
+  border-radius: 5px;
+  padding: 30px;
+}
+
+.show-modal{
+  visibility: visible;
+  opacity:1;
+}
+
+.main-bg{
+  padding: 100px 20px;
+  background: lightgray;
+}
